<resources translatable="false">
    <string name="app_name">Поиск фильмов</string>
    <string name="imageView1Description">Звездный путь</string>
    <string name="imageView2Description">Стартрек. Возмездие</string>
    <string name="imageView3Description">Стартрек. Бесконечность</string>
    <string name="img1TextView">Звездный путь</string>
    <string name="img3TextView">Стартрек. Бесконечность</string>
    <string name="img2TextView">Стартрек. Возмездие</string>
    <string name="img1Description"> Когда Нерон с планеты Ромул приходит из будущего,
        чтобы отомстить Федерации, конкуренты Кирк и Спок должны объединиться,
        чтобы не дать ему разрушить все, что им дорого. Во время этого будоражащего путешествия,
        наполненного эффектными боями, юмором и космическими угрозами, новоиспеченные члены команды
        военного корабля «Энтерпрайз» смело встретятся лицом к лицу с невообразимыми опасностями.
    </string>
    <string name="img2Description"> Вернувшись на Землю, команда корабля «Энтерпрайз» обнаруживает,
        что деятельность и принципы их организации подорваны изнутри. Флот скован необъяснимым ужасом
        и бездействует, пока мир все глубже погружается в бездну.
        Капитан Кирк берет на себя руководство операцией по поимке злодея, ответственного за этот хаос
        и способного уничтожить все человечество.
        В запутанной игре не на жизнь, а на смерть, любовь и дружба будут принесены в жертву ради
        единственного, что осталось у Кирка - его команды.
    </string>
    <string name="img3Description"> Бесстрашная команда крейсера звездного флота «Энтерпрайз» исследует
        неизведанные глубины космоса. Во время этого полного опасностей путешествия герои сталкиваются
        с таинственной силой, ставящей под угрозу не только их миссию и стабильность Федерации, но и весь миропорядок.
    </string>
    <string name="imgDetailDescription">Изображение фильма</string>
    <string name="commentText">Введите комментарий</string>
    <string name="buttonInvite">Пригласить</string>
    <string name="favoriteTitle">Избранное</string>
    <string name="buttonDetail">Детали</string>
    <string name="buttonWatch">Посмотреть позже</string>
    <string name="buttonEdit">Изменить</string>
    <string name="ScheduleTitle">Смотреть позже</string>

</resources>