<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="155dp"
                android:layout_height="230dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/imageViewDescription"
                app:srcCompat="@drawable/img_1"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="93dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Детали"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/img1TextView"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="155dp"
                android:layout_height="230dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/imageView2Description"
                app:srcCompat="@drawable/img_2"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="253dp"
                android:scaleType="centerCrop"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Детали"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="20dp"
                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/img2TextView"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="155dp"
                android:layout_height="230dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/imageView3Description"
                app:srcCompat="@drawable/img_3"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="420dp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Детали"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/img3TextView"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>